--- a/force-app/main/default/aura/Action_RemoveDelegate/Action_RemoveDelegate.cmp
+++ b/force-app/main/default/aura/Action_RemoveDelegate/Action_RemoveDelegate.cmp
@@ -7,6 +7,7 @@
     <!-- attributes:-->
     <aura:attribute name="delegateContact" type="String"/>
     <aura:attribute name="callback" type="Object"/>
+    <aura:attribute name="messageText" type="String"/>
 
     <!-- methods:-->
     <aura:method name="execute" action="{!c.doExecute}" access="public">
@@ -15,9 +16,9 @@
     </aura:method>
 
     <!-- component body:-->
-    <c:Popup aura:id="deleteDelegateDialog" title="{!$Label.c.PG_PST_L_Delegates_Remove_Delegate}" size="small">
+    <c:Popup aura:id="deleteDelegateDialog" title="{!$Label.c.PG_PST_L_Delegates_Remove_Delegate}" size="small" showClose="false">
         <c:RRSpinner aura:id="spinner" />
-        {!$Label.c.PG_PST_L_Delegates_Remove_Mess_P1 + ' ' + v.delegateContact.Name + ' ' + $Label.c.PG_PST_L_Delegates_Remove_Mess_P2}
+        {!v.messageText}
         <aura:set attribute="footerButtons">
             <button class="apollo-btn primary" onclick="{!c.doYes}">{!$Label.c.BTN_Yes}</button>
             <button class="apollo-btn tertiary" onclick="{!c.doNo}">{!$Label.c.BTN_No}</button>
