--- a/force-app/main/default/aura/HomePage/HomePage.cmp
+++ b/force-app/main/default/aura/HomePage/HomePage.cmp
@@ -18,7 +18,7 @@
     <!-- component body: -->
     <c:RRSpinner aura:id="spinner" size="medium" fixed="true" showSpinner="true"/>
     <aura:if isTrue="{!v.initialized}">
-        <aura:if isTrue="{!or(v.userMode == 'Participant', v.userMode == 'Delegate')}">
+        <aura:if isTrue="{!or(v.userMode == 'Participant')}">
             <c:HomePageParticipant/>
         </aura:if>
         <aura:if isTrue="{!v.userMode != 'Participant'}">
