--- a/force-app/main/default/aura/PersonalSettings/PersonalSettings.cmp
+++ b/force-app/main/default/aura/PersonalSettings/PersonalSettings.cmp
@@ -1,15 +1,16 @@
 <!--Created by D.Yasinskyi on 27.04.2018-->
-<aura:component description="PersonalSettings" implements="forceCommunity:availableForAllPageTypes">
+<aura:component controller="AccountSettingsController" description="PersonalSettings" implements="forceCommunity:availableForAllPageTypes">
 
     <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
                   scripts="{!join(',', $Resource.rr_community_js)}"
                   afterScriptsLoaded="{!c.doInit}"/>
 
     <!-- attributes: -->
-    <aura:attribute name="currentTab" type="String" default="my-team"/>
+    <aura:attribute name="currentTab" type="String" default="account-settings"/>
     <aura:attribute name="showSpinner" type="Boolean" default="true" access="private"/>
-    <aura:attribute name="userMode" type="String" description="HCP / PI / Participant / Delegate" access="private"/>
+    <aura:attribute name="userMode" type="String" description="HCP / PI / Participant" access="private"/>
     <aura:attribute name="validMode" type="Boolean" default="false" access="private"/>
+    <aura:attribute name="isDelegate" type="Boolean" default="false" access="private"/>
 
     <!-- handlers: -->
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
@@ -18,7 +19,7 @@
 
     <aura:if isTrue="{!!v.showSpinner}">
         <div class="ps-container">
-            <aura:if isTrue="{!v.validMode}">
+            <aura:if isTrue="{!and(v.validMode, !v.isDelegate)}">
                 <c:rrButtonTubSet>
                     <aura:if isTrue="{!v.userMode == 'Participant'}">
                         <c:rrButtonTubSetItem title="{!$Label.c.PG_PST_L_Delegates}" tabId="delegates" currentTab="{!v.currentTab}"/>
@@ -35,7 +36,6 @@
                 <aura:if isTrue="{!or(v.currentTab == 'my-team', v.currentTab == 'delegates')}">
                     <c:MyTeam userMode="{!v.userMode}"/>
                 </aura:if>
-
                 <aura:if isTrue="{!v.currentTab == 'account-settings'}">
                     <c:AccountSettings userMode="{!v.userMode}"/>
                 </aura:if>
