Welcome email fix

--- a/force-app/main/default/components/EmailTemplate.component
+++ b/force-app/main/default/components/EmailTemplate.component
@@ -30,7 +30,7 @@
                 <apex:outputText value="{!bodyValue}" escape="false"/>
 
                 <!-- for delegates: -->
-                <c:EmailTemplateDelegate rendered="{!isDelegate}"
+                <c:EmailTemplateDelegate rendered="{!isDelegate && userType != 'Participant'}"
                         userMode="{!resultUserMode}" delegateLevelsPI="{!delegateLevelsPI}" delegateLevelsHCP="{!delegateLevelsHCP}"/>
 
                 <div style="margin-top: 20px; margin-bottom: 30px;">
