--- a/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
+++ b/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
@@ -26,11 +26,13 @@
             </div>
             <div class="slds-col slds-size--1-of-5 slds-p-around--medium">
                 <div class="ssi-site-type">
-                        {!v.studySiteWrapper.siteType}
+                        {!v.studySiteWrapper.siteType + ' Site'}
                 </div>
-                <div class="ssi-site-distance">
-                        {!v.studySiteWrapper.distance}
-                </div>
+                <aura:if isTrue="{!v.studySiteWrapper.siteType!='Virtual'}">
+                    <div class="ssi-site-distance">
+                            {!v.studySiteWrapper.formatedDistance}
+                    </div>
+                </aura:if>
             </div>
             <div class="slds-col slds-size--4-of-5 slds-p-around--medium">
                 <div class="ssi-address">
