--- a/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.css
+++ b/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.css
@@ -13,15 +13,29 @@
 .THIS .ssi-site-type {
     color: #999999;
     font-size: 14px;
-    text-align: right;
 }
 .THIS .ssi-site-distance{
     color: #999999;
     font-size: 14px;
-    text-align: right;
 }
 .THIS .ssi-address{
     color: #333333;
     font-size: 13px;
+}
+.THIS .btn-request-to-refer{
+    color: #63C900;
+}
+.THIS .btn-refer-patient{
+    color: #297DFD;
+}
+
+@media all and (min-width: 768px){
+    .THIS .ssi-site-distance,
+    .THIS .ssi-site-type{
+        text-align: right;
+    }
+}
+.THIS .apollo-btn{
+    width: 100%;
 }
 
