--- a/force-app/main/default/aura/AccountSettings/AccountSettings.cmp
+++ b/force-app/main/default/aura/AccountSettings/AccountSettings.cmp
@@ -83,7 +83,8 @@
                             <div class="as-sub-title"
                                  style="margin-bottom: 15px">{!$Label.c.PG_AS_T_HCP_Email_Preferences}</div>
                             <div class="as-email-pref-item slds-grid slds-gutters">
-                                <lightning:input type="toggle" label="" messageToggleActive="{!$Label.c.BTN_On}" variant="label-hidden"
+                                <lightning:input type="toggle" label="" messageToggleActive="{!$Label.c.BTN_On}"
+                                                 variant="label-hidden"
                                                  messageToggleInactive="{!$Label.c.BTN_Off}"
                                                  class="slds-col ah-toggle"
                                                  checked="{!v.initData.myContact.HCP_Opt_In_Patient_Status_Emails__c}"
@@ -91,7 +92,8 @@
                                 {!$Label.c.PG_AS_L_Opt_In_HCP_Patient_Status_Emails}
                             </div>
                             <div class="as-email-pref-item slds-grid slds-gutters">
-                                <lightning:input type="toggle" label="" messageToggleActive="{!$Label.c.BTN_On}" variant="label-hidden"
+                                <lightning:input type="toggle" label="" messageToggleActive="{!$Label.c.BTN_On}"
+                                                 variant="label-hidden"
                                                  messageToggleInactive="{!$Label.c.BTN_Off}"
                                                  class="slds-col ah-toggle"
                                                  checked="{!v.initData.myContact.HCP_Opt_In_Study_Emails__c}"
@@ -99,7 +101,8 @@
                                 {!$Label.c.PG_AS_L_Opt_In_HCP_Study_Emails}
                             </div>
                             <div class="as-email-pref-item slds-grid slds-wrap slds-gutters">
-                                <lightning:input type="toggle" label="" messageToggleActive="{!$Label.c.BTN_On}" variant="label-hidden"
+                                <lightning:input type="toggle" label="" messageToggleActive="{!$Label.c.BTN_On}"
+                                                 variant="label-hidden"
                                                  messageToggleInactive="{!$Label.c.BTN_Off}"
                                                  class="slds-col ah-toggle"
                                                  checked="{!v.initData.myContact.HCP_Opt_In_Referral_Status_Emails__c}"
@@ -110,7 +113,8 @@
                         <aura:if isTrue="{!v.userMode== 'Participant'}">
                             <div class="as-sub-title">{!$Label.c.PG_AS_T_Participant_Email_Preferences}</div>
                             <div class="as-email-pref-item slds-grid slds-wrap slds-gutters">
-                                <lightning:input type="toggle" label="" messageToggleActive="{!$Label.c.BTN_On}" variant="label-hidden"
+                                <lightning:input type="toggle" label="" messageToggleActive="{!$Label.c.BTN_On}"
+                                                 variant="label-hidden"
                                                  messageToggleInactive="{!$Label.c.BTN_Off}"
                                                  class="slds-col ah-toggle"
                                                  checked="{!v.initData.myContact.Participant_Opt_In_Status_Emails__c}"
@@ -194,27 +198,38 @@
                     <aura:if isTrue="{!v.userMode == 'Participant'}">
                         <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_4-of-12">
                             <div class="label rr-sentence-font">{!$Label.c.PG_AS_F_First_name}</div>
-                            <c:rrInput valueString="{!v.initData.participant.First_Name__c}" disabled="true"/>
+                            <c:rrInput valueString="{!if(v.isDelegate,
+                                    v.initData.myContact.FirstName,v.initData.participant.First_Name__c)}"
+                                       disabled="true"/>
                         </div>
                         <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_4-of-12">
                             <div class="label rr-sentence-font">{!$Label.c.PG_AS_F_Last_name}</div>
-                            <c:rrInput valueString="{!v.initData.participant.Last_Name__c}" disabled="true"/>
+                            <c:rrInput valueString="{!if(v.isDelegate,
+                                    v.initData.myContact.LastName,v.initData.participant.Last_Name__c)}"
+                                       disabled="true"/>
                         </div>
                         <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_4-of-12">
                             <div class="label rr-sentence-font">{!$Label.c.PG_AS_F_Phone_number}</div>
-                            <c:rrInput valueString="{!v.initData.participant.Phone__c}" disabled="true"/>
+                            <c:rrInput valueString="{!if(v.isDelegate,
+                                    v.initData.myContact.Phone,v.initData.participant.Phone__c)}"
+                                       disabled="true"/>
                         </div>
                         <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_4-of-12">
                             <div class="label rr-sentence-font">{!$Label.c.PE_State}</div>
-                            <c:rrInput valueString="{!v.initData.participant.Mailing_State__c}" disabled="true"/>
+                            <c:rrInput valueString="{!if(v.isDelegate,
+                                    v.initData.myContact.MailingState,v.initData.participant.Mailing_State__c)}"
+                                       disabled="true"/>
                         </div>
                         <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_4-of-12">
                             <div class="label rr-sentence-font">{!$Label.c.PE_Country}</div>
-                            <c:rrInput valueString="{!v.initData.participant.Mailing_Country__c}" disabled="true"/>
+                            <c:rrInput valueString="{!if(v.isDelegate,
+                                v.initData.myContact.MailingCountry,v.initData.participant.Mailing_Country__c)}"
+                                       disabled="true"/>
                         </div>
                         <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_4-of-12">
                             <div class="label rr-sentence-font">{!$Label.c.PG_AS_F_Zip_Postal_Code}</div>
-                            <c:rrInput valueString="{!v.initData.participant.Mailing_Zip_Postal_Code__c}"
+                            <c:rrInput valueString="{!if(v.isDelegate,
+                                v.initData.myContact.MailingPostalCode,v.initData.participant.Mailing_Zip_Postal_Code__c)}"
                                        disabled="true"/>
                         </div>
                     </aura:if>
