--- a/force-app/main/default/aura/DelegatesDisclaimer/DelegatesDisclaimer.css
+++ b/force-app/main/default/aura/DelegatesDisclaimer/DelegatesDisclaimer.css
@@ -1,9 +1,12 @@
 /**
  * Created by Igor Malyuta on 23.03.2019.
  */
-.THIS p{
+.THIS .mti-text{
+    margin-top: 12px;
     color: #999999;
     font-style: italic;
     font-size: 12px;
     text-align: center;
+    line-height: 14px;
+    /*text-indent: 50px;*/
 }
