Change Participant Page Layout

--- a/unpackaged/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
@@ -160,6 +160,12 @@
         <relatedList>Participant_Enrollment__c.Participant__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <fields>NAME</fields>
+        <fields>Status__c</fields>
+        <fields>Study_Site__c</fields>
+        <relatedList>Participant_Study_Enrollment__c.Participant__c</relatedList>
+    </relatedLists>
+    <relatedLists>
         <relatedList>RelatedEntityHistoryList</relatedList>
     </relatedLists>
     <relatedLists>
@@ -178,7 +184,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h3D000000hULj</masterLabel>
+        <masterLabel>00h5C000000wjeF</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
